# DayDreamingDayDreaming

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  REFactor_NOTES.md  SYSTEM_DESIGN.md  conftest.py  generate_prompts.py  openrouter_bug_reproduction.py  pyproject.toml  pytest.ini
.claude/agents/: test-writer.md
.github/workflows/: tests.yml
data/: README.md  openrouter_free_models.csv
data/01_raw/: evaluation_models.csv  evaluation_templates.csv  generation_models.csv  generation_templates.csv
data/1_raw/: concepts_metadata.csv  draft_templates.csv  essay_templates.csv  evaluation_templates.csv  generation_templates.csv  link_templates.csv  llm_models.csv  replication_config.csv
data/articles/: combinatorial_search.md
data/concept_articles/: default_mode_network.md  economic_innovation_models.md
data/concepts/: day_dreaming_concepts.json
data/evaluation_templates/: creativity_metrics.txt  iterative_loops.txt  scientific_rigor.txt
data/results/: 43ftibqi56628az1.txt  README.md  RESULTS.md  e_2b4k6tvo4kf7ibjh.txt  e_3hdt16ed4bh528s0.txt  e_46i3c5zgxn3nowz.txt  e_4nqjjtqtnpxlljlz.txt  e_sq5klak2lljyyom.txt  vtt9vuxeila0t9rp.txt
data/templates/: 00_systematic_analytical.txt  01_creative_synthesis.txt  02_problem_solving.txt  (+2 more)
daydreaming_dagster/: README.md  __init__.py  constants.py  definitions.py  types.py
daydreaming_dagster_tests/: conftest.py  test_asset_level_mocking.py  test_assets.py  test_dagster_cli_compatibility.py  test_eval_response_parser_with_fixtures.py  test_full_pipeline_integration.py  test_llm_integration.py  test_partition_materialization.py  test_pipeline_with_fixtures.py  test_resource_dependencies.py  test_simple_llm_mocking.py
daydreaming_experiment/: __init__.py  concept.py  concept_dag.py  concept_db.py  config.py  evaluation_runner.py  evaluation_templates.py  execution.py  experiment_runner.py  model_client.py  prompt.py  prompt_factory.py  results_analysis.py  storage.py  test_concept.py  test_concept_dag.py  test_concept_db.py  test_config.py  test_evaluation_runner.py  test_evaluation_templates.py  test_execution.py  test_experiment_runner.py  test_experiment_runner_integration.py  test_integration_e2e.py  test_model_client.py  test_prompt.py  test_prompt_factory.py  test_results_analysis.py  test_storage.py
design/: SYSTEM_DESIGN.md  current_search_strategy.md
docs/: README.md  architecture.md  backfill_overview.md  cohorts.md  constructive_search.md  dagster_dynamic_partitions_gotchas.md  google_deep_search_on_originality_of_the_essay.txt  index.md  llm_documents_index_guide.md  project_goals.md  refactor_contract.yaml  spec_dsl.md  unified_runner.md
plans/: backcompat_cleanup_report.md  code_simplification_actions.md  cohort_config_cleanup.md  cohort_definition_di_plan.md  cohort_generation.md  cohort_membership_builder_oop_plan.md  cohort_membership_minimal_schema.md  cohort_membership_refactor_plan.md  cohort_membership_service_plan.md  cohort_reuse_plan.md  cohort_scope_manifest_followup.md  cohorts.md  collapse_membership_validations_plan.md  content_combinations_single_source.md  csv_atfile_rollout.md  data_checks_cleanup_plan.md  data_layer_spec.md  deterministic_gen_ids_phase2.md  deterministic_generation_ids.md  doc_id_first_design_plan.md  doc_id_in_tasks_plan.md  draft_parser_first_design.md  eager_core_and_schedule_toggles_plan.md  essay_generator_redesign.md  evaluate_drafts_from_link_partitions.md  evaluation_parsing_refactor_plan.md  experiment_management_plan.md  gen-id-and-gens-rename.md  gen_id_metadata_cleanup_plan.md  gen_id_migration_analysis_plan.md  generation_envelope_plan.md  get_rid_of_raw.md  links_to_essay_parser_minimal.md  llm_documents_storage_plan.md  membership_catalog_validation_shift_plan.md  multi_stage_generation_final_only.md  option_b_schedule_only_plan.md  partitions_from_docs.md  pass_generation_response_via_pipeline_fk.md  prompt_asset_unification_plan.md  (+29 more)
reports/: cohort_system_review.md  deep_researc_on_originality_of_llm_daydreaming_essay.md  functions.md  solid_review.md  unit_tests_dependency_injection_review.md
scripts/: aggregate_scores.py  audit_pinned_lineage.py  backfill_documents.py  backfill_documents_index.py  backfill_draft_combo_ids.py  backfill_from_evaluations.py  backfill_missing_evaluation_parsed.py  backfill_template_id_in_metadata.py  build_cohort_from_list.py  build_evaluation_results_table.py  build_generation_results_table.py  build_pivot_tables.py  check_cohort_parsed_coverage.py  check_duplicate_contents.py  check_evaluation_template.py  cleanup_generation_cascade.py  compile_experiment_design.py  copy_essays_with_drafts.py  copy_essays_with_links.py  dedupe_csv_by_path.py  enrich_content_hash.py  filter_active_evaluation_scores.py  find_legacy_evals.py  find_malformed_legacy_links.py  find_missing_selected_concepts.py  find_top_prior_art.py  inspect_selected_generations.py  list_missing_draft_templates.py  list_partitions_latest.py  migrate_evaluation_scores_max9.py  migrate_generated_tables_to_draft_schema.py  migrate_membership_to_normalized.py  migrate_metadata_to_gen_id.py  migrate_replicate_indexes.py  migrate_tasks_csvs_gen_id.py  parse_all_scores.py  print_latest_doc.py  prune_orphan_doc_dirs.py  purge_cohort.py  rebuild_generation_results.sh  (+15 more)
tests/: README.md  conftest.py  test_cli_external_integration.py  test_cohort_partition_wiring.py  test_concepts_active_column_integration.py  test_copy_mode_end_to_end.py  test_csv_error_handling.py  test_csv_reader_unit.py  test_definitions_paths.py  test_draft_parser_failure_raw_saved.py  test_draft_parsers.py  test_essay_idea_last_parser.py  test_essay_response_copy_mode.py  test_essay_response_parser_mode.py  test_eval_response_parser_with_fixtures.py  test_generate_cohort_spec.py  test_import_definitions.py  test_integration_data_dependent.py  test_integration_prompt_iterator.py  test_nodes.py  test_pipeline_integration.py  test_select_top_prior_art.py  test_spec_wizard.py  test_template_loader.py  test_working_integration.py
tools/: refactor_contract.yaml
(+705 files in other folders)
