[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "daydreaming_dagster.definitions"

[project]
requires-python = ">=3.9"
name = "daydreaming-dagster"
version = "0.0.1"
readme = "README.md"
description = "Dagster pipeline for testing whether LLMs can reinvent Gwern's Daydreaming Loop concept"
dependencies = [
    "openai>=1.0.0",
    "jinja2>=3.0.0",
    "pandas>=1.5.0",
    "dagster>=1.11.5",
    "dagster-webserver>=1.11.5",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "antlr4-python3-runtime>=4.13.2",
    "tenacity>=8.0.0",
    "ratelimit>=2.2.0",
    "pytest>=8.4.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.4",
    "pytest-cov~=3.0",
    "pytest-mock>=1.7.1",
    "pytest-xdist[psutil]>=2.5",
]
dev = [
    "ruff>=0.5.3",
    "black>=25.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["daydreaming_dagster*"]
namespaces = false

[tool.pytest.ini_options]
# Note: a historical CLI compatibility test that reproduced an ANTLR4 parsing
# issue has been removed. We pin antlr4-python3-runtime>=4.13.2, and the test
# is no longer needed.
addopts = """
--cov-report term-missing \
--cov daydreaming_dagster \
--cov-fail-under 0
"""
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
# Disable all rules temporarily to prevent editor freezing
select = []
ignore = [
    "E501",  # Line too long
    "F401",  # Unused imports
    "F841",  # Unused variables
    "W291",  # Trailing whitespace
    "W292",  # No newline at end of file
]

[tool.ruff.format]
docstring-code-format = true
